# Tradingmode

./: .env.example  .gitignore  README.md  _backend.cmd  _frontend.cmd  build.bat  setup.bat  start.bat  stop.bat
Tradingmode/: api.js  app.jsx  build.mjs  charts.jsx  data.js  index.html  loader.js  package-lock.json  package.json  portfolio-page.jsx  signals-page.jsx  strategy-coach-page.jsx  styles.css
backend/: main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: ai.py  backtest.py  converters.py  indicators.py  market.py  ohlcv.py  portfolio.py  schemas.py  signals.py  strategy.py  trend.py
backend/core/: ai_interpreter.py  backtest.py  data_loader.py  indicators.py  iteration_log.py  market_snapshot.py  portfolio.py  signals.py  strategy_coach.py  strategy_engine.py  trend.py
backend/core/adapters/: binance_adapter.py  krx_adapter.py
backend/core/brokers/: base.py
backend/core/types/: __init__.py  errors.py  schemas.py
backend/lib/: cache.py  logger.py
backend/tests/: conftest.py  test_ai_interpreter.py  test_backtest.py  test_converters.py  test_data_loader.py  test_indicators.py  test_iteration_log.py  test_portfolio.py  test_signals.py  test_startup.py  test_strategy_coach.py  test_strategy_engine.py  test_trend.py
backend/tests/loadtest/: README.md  test_concurrency.py  test_health_load.py
backend/tests/test_api/: conftest.py  test_ai.py  test_errors.py  test_health.py  test_ohlcv_routes.py  test_portfolio.py  test_regression.py  test_strategy.py
docs/: .pdca-status.json  improvement-plan.md
(+42 files in other folders)
